--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            import fs from 'fs';
+            const fs = require('fs');
 
             const path = core.getInput('path');
             core.debug(`Load package.json at ${path}`);
