--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: badges
+          token: ${{ secrets.PAT }}
 
       - name: Install Dependencies
         run: yarn install
